# snkpkg

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  pr.yml
src/snkpkg/: hello.py  main.py
tests/: test_cli_integration.py  test_hello.py  test_main.py
