[project]
name = "snkpkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]

[project.scripts]
snkpkg = "snkpkg.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
